--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DB_URL='mongodb+srv://danushriprakashsaranya:ChUyqg6MbrcmTbZZ@cluster1.m6tjv.mongodb.net/'
+DB_URL='mongodb+srv://danushriprakashsaranya:ChUyqg6MbrcmTbZZ@cluster1.m6tjv.mongodb.net/ASAP'
 PORT = 8080
