--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,9 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "mongoose": "^8.9.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.4",
     "nodemon": "^3.1.7"
   }
 }
